# For-Test

./: .env-example  Dockerfile  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/backend/settings/: __init__.py  django.py
backend/backend/urls/: __init__.py
backend/core/: models.py  utils.py
backend/core/api/v1/: serializers.py  urls.py  views.py
backend/core/management/commands/: create_super_user.py
backend/core/migrations/: 0001_initial.py  0002_profile_alter_transaction_user_delete_user.py  0003_alter_transaction_summ.py
devops/nginx/: Dockerfile  default.conf  nginx.conf
